--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,6 @@ script:
   - nosetests test
 notifications:
   email: chris.a.st.pierre@gmail.com
+install:
+  - pip install --use-mirrors -r test/requirements.txt
+  - pip install --use-mirrors -e .
