--- a/test/pylintrc.conf
+++ b/test/pylintrc.conf
@@ -62,9 +62,6 @@ disable=W0142,W1201,R0903,I0011,E1103
 # (visual studio) and html
 output-format=text
 
-# Include message's id in output
-include-ids=yes
-
 # Put messages in a separate file for each module / package specified on the
 # command line instead of printing them on stdout. Reports (if any) will be
 # written in a file name "pylint_global.[txt|html]".
@@ -84,6 +81,9 @@ evaluation=10.0 - ((float(5 * error + warning + refactor + convention) / stateme
 # evaluation report (RP0004).
 comment=no
 
+# Template used to display messages. This is a python new-style format string
+# used to format the massage information. See doc for all details
+msg-template={path}:{line}: [{msg_id}({symbol}), {obj}] {msg}
 
 [VARIABLES]
 
@@ -92,7 +92,7 @@ init-import=no
 
 # A regular expression matching the beginning of the name of dummy variables
 # (i.e. not used).
-dummy-variables-rgx=_|dummy
+dummy-variables-rgx=_$|dummy
 
 # List of additional names supposed to be defined in builtins. Remember that
 # you should avoid to define new builtins when possible.
@@ -115,6 +115,9 @@ ignore-docstrings=yes
 
 # Maximum number of characters on a single line.
 max-line-length=79
+
+# Regexp for a line that is allowed to be longer than the limit.
+ignore-long-lines=^\s*(# )?<?https?://\S+>?$
 
 # Maximum number of lines in a module
 max-module-lines=1000
@@ -233,7 +236,7 @@ max-locals=20
 max-returns=6
 
 # Maximum number of branch for function / method body
-max-branchs=18
+max-branches=18
 
 # Maximum number of statements in function / method body
 max-statements=75
@@ -262,6 +265,9 @@ defining-attr-methods=__init__,__new__,setUp
 
 # List of valid names for the first argument in a class method.
 valid-classmethod-first-arg=cls
+
+# List of valid names for the first argument in a metaclass class method.
+valid-metaclass-classmethod-first-arg=mcs
 
 
 [EXCEPTIONS]
